Some minor other issues fixed
